# veraxi

./: .coderabbit.yaml  .gitignore  .ignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  test_grounding.py  test_memory.py  test_searxng.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
app/: .dockerignore  .env.example  .flutter-plugins-dependencies  Dockerfile  Dockerfile.test  Dockerfile.web  README.md  analysis_options.yaml  nginx.conf  pubspec.yaml
backend/: .env.example  .importlinter  Dockerfile  api_gateway.py  config.py  prompts.py  pyproject.toml  worker.py
backend/evaluation/: dataset.json  grounding.py
backend/ingestion/: __main__.py  chunk_embed.py  entity_resolution.py  extract.py  graph_write.py
backend/mcp_server/: __main__.py  context.py  llm_loop.py  server.py
backend/mcp_server/tools/: delete_entity.py  delete_relationship.py  delete_vector.py  evaluate_grounding.py  get_schema.py  get_stats.py  ingest_data.py  insert_graph.py  insert_vector.py  query_graph.py  run_analytics.py  search_vectors.py  update_document.py  update_entity.py  web_search.py
backend/retrieval/: graph_analytics.py  merge_rank.py
backend/storage/: neo4j_client.py  qdrant_client.py
backend/tests/: conftest.py  custom_gemini_eval.py  custom_openai_eval.py  test_entity_resolution.py  test_graph_analytics.py  test_grounding.py  test_ingestion_linking.py  test_mcp_tools.py  test_merge_rank.py  test_rag_deepeval.py  test_web_search.py
docs/: API_REFERENCE.md  ROADMAP.md  architecture.md  gcp_staging_environment.md
infra/: main.tf  terraform.tfstate  variables.tf
scripts/: ask_veraxi.py  (+4 more)
(+69 files in other folders)
