[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["backend*"]


[project]
name = "veraxi-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "neo4j",
    "qdrant-client",
    "mcp",
    "google-genai",
    "splink",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "import-linter",
    "testcontainers[neo4j,qdrant]",
]